--- a/web/components/sections/Hero.module.css
+++ b/web/components/sections/Hero.module.css
@@ -1,4 +1,4 @@
-@import "../../styles/custom-media.css";
+@import "@/styles/custom-media.css";
 
 .root {
   composes: center from "../../styles/shared.module.css";
