--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -2,5 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* add custom global styles here */
-
+/*  add custom global styles here */
+/*  Fix for next/image components : Safari 15+ displays a gray border while loading. Possible solutions: */
+@supports (font: -apple-system-body) and (-webkit-appearance: none) {
+  img[loading="lazy"] {
+    clip-path: inset(0.6px)
+  }
+}
